# precommit-hook-xml

./: .pre-commit-hooks.yaml  LICENSE  README.md  setup.cfg
pre_commit_hook_xml/: format_xml.py  remove_leading.py  remove_lines.py
