[metadata]
name = pre_commit_hook_xml
version = 1.0.0
description = Some hooks useful for XML files
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/dimka-abramov/precommit-hook-xml
author = Dmitry Abramov
author_email = dmitry.i.abramov@gmail.com
license = Apache-2.0
license_files = LICENSE
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy

[options]
packages = find:
install_requires = lxml >= 5.3.2
python_requires = >=3.9

[options.packages.find]
exclude =

[options.entry_points]
console_scripts =
    format-xml = pre_commit_hook_xml.format_xml:main
    remove-lines = pre_commit_hook_xml.remove_lines:main

[bdist_wheel]
universal = True
